--- a/static/styles.css
+++ b/static/styles.css
@@ -1,22 +1,37 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #fff;
   color: #333;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+textarea,
+h2 {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 textarea {
   width: 80%;
-  height: 60%;
+  height: 70%;
   padding: 15px;
   border: none;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-size: 16px;
   resize: none;
   outline: none;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  align-self: flex-end;
+  margin-right: 10%;
+  color: "red";
 }
